test/tests/stages/6_statements_and_conditional_expressions/valid/extra_credit/goto_label_main.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  identifier(main)
  ;
  return
  const int(5)
  ;
  identifier(main)
  :
  return
  const int(0)
  ;
  }
