test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/extra_credit/goto_without_label.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[14]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  ;
  identifier(lbl)
  :
  return
  const int(0)
  ;
  }
